Added hints for Web(iDoor)

--- a/challenges/web/iDoor/service/index.html
+++ b/challenges/web/iDoor/service/index.html
@@ -29,6 +29,16 @@
             <button onclick="generateVoucher()">Generate Code</button>
             <p id="voucher-code"></p>
         </section>
+        <section class="hints">
+            <p>
+                Orrnlqj iru wkh iodj? <br> Wub brxu oxfn zlwk vfudslqj <code>frghv/FRGH_*_2024</code>. Grq'w zruub, brx
+                zrq'w
+                qhhg d SkG
+                lq frgh-fudfnlqj
+                <br>
+                Jrrg oxfn!
+            </p>
+        </section>
     </main>
 
     <footer>
